// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > matches default variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-flQbIK cjxgDK aje-select sc-iXqmyu gMHWSj aje-select aje-select--default"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <label
      class="sc-dVBluf eSKkgA"
      id="react-aria-:r3:"
    >
      Custom dropdown label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-cMqPwU fLpmHx aje-btn aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      <span
        class="sc-gQJZgv dlYfMK"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
        style="margin-left: auto;"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots > matches floating variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-flQbIK cjxgDK aje-select sc-iXqmyu gMHWSj aje-select aje-select--floating aje-select--floating"
  >
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <label>
        <select
          tabindex="-1"
        >
          <option />
          <option
            value="react-aria-1"
          >
            Item 1
          </option>
          <option
            value="react-aria-2"
          >
            Item 2
          </option>
        </select>
      </label>
    </div>
    <div
      class="sc-bCjwNj cJjdMN"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-cMqPwU fLpmHx aje-btn aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        tabindex="0"
        type="button"
      >
        <span
          class="sc-gQJZgv dlYfMK"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
          style="margin-left: auto;"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-dVBluf eSKkgA"
        id="react-aria-:rb:"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
